--- a/dashboard/dash.html
+++ b/dashboard/dash.html
@@ -65,6 +65,19 @@ footer{
             <li><a href="#">Teddie</a></li>
           </ul>
         </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">sub <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a ui-sref="home.page3">page3</a></li>
+            <li><a ui-sref="home.page4">page4</a></li>
+            <li><a href="#">Jose</a></li>
+            <li><a href="#">Marie</a></li>
+            <li><a href="#">Simon</a></li>
+            <li><a href="#">Jamie</a></li>
+            <li><a href="#">Andrew</a></li>
+            <li><a href="#">Teddie</a></li>
+          </ul>
+        </li>
         <li><a href="#">FAQs</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
